// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
    role="application"
  >
    <label
      class="ecl-form-label"
      for="select-default"
      id="select-default-label"
    >
      Select a country
      <span
        class="ecl-form-label__optional"
      >
          (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
      id="select-default-helper"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--m"
    >
      <select
        class="ecl-select"
        id="select-default"
        name="country"
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Select Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-form-group"
    role="application"
  >
    <label
      class="ecl-form-label"
      for="select-default"
      id="select-default-label"
    >
      Select a country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
      id="select-default-helper"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--m"
    >
      <select
        class="ecl-select"
        data-test="data-test-value"
        data-test-1="data-test-value-1"
        id="select-default"
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Select Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-form-group"
    role="application"
  >
    <label
      class="ecl-form-label"
      for="select-default"
      id="select-default-label"
    >
      Select a country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
      id="select-default-helper"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--m"
    >
      <select
        class="ecl-select custom-class custom-class--test"
        id="select-default"
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Select Disabled renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
    role="application"
  >
    <label
      class="ecl-form-label ecl-form-label--disabled"
      for="select-default"
      id="select-default-label"
    >
      Select a country
      <span
        class="ecl-form-label__optional"
      >
          (optional)
      </span>
    </label>
    <div
      class="ecl-help-block ecl-help-block--disabled"
      id="select-default-helper"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--disabled ecl-select__container--m"
    >
      <select
        class="ecl-select"
        disabled=""
        id="select-default"
        name="country"
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Select Multiple renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
    role="application"
  >
    <label
      class="ecl-form-label"
      for="select-multiple"
      id="select-multiple-label"
    >
      Select a country
      <span
        aria-label="required"
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
      id="select-multiple-helper"
    >
      This is the helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--m"
    >
      <select
        class="ecl-select"
        data-ecl-auto-init="Select"
        data-ecl-select-all="Select all"
        data-ecl-select-clear-all="Clear all"
        data-ecl-select-close="Close"
        data-ecl-select-default="Select an item"
        data-ecl-select-multiple=""
        data-ecl-select-no-results="No results found"
        data-ecl-select-search="Enter keyword"
        id="select-multiple"
        multiple=""
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Select Required renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
    role="application"
  >
    <label
      class="ecl-form-label"
      for="select-default"
      id="select-default-label"
    >
      Select a country
      <span
        class="ecl-form-label__required"
      >
        *
      </span>
    </label>
    <div
      class="ecl-help-block"
      id="select-default-helper"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-select__container ecl-select__container--m"
    >
      <select
        class="ecl-select"
        id="select-default"
        name="country"
        required=""
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Select With error renders correctly 1`] = `
<jest>
  <div
    class="ecl-form-group"
    role="application"
  >
    <label
      class="ecl-form-label ecl-form-label--invalid"
      for="select-default"
      id="select-default-label"
    >
      Select a country
      <span
        class="ecl-form-label__optional"
      >
          (optional)
      </span>
    </label>
    <div
      class="ecl-help-block"
      id="select-default-helper"
    >
      This is the input's helper text.
    </div>
    <div
      class="ecl-feedback-message"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--m ecl-feedback-message__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#error"
        />
      </svg>
            This is the error message
    </div>
    <div
      class="ecl-select__container ecl-select__container--invalid ecl-select__container--m"
    >
      <select
        class="ecl-select"
        id="select-default"
        name="country"
      >
        <optgroup
          label="European countries"
        >
          <option
            value="1"
          >
            Belgium
          </option>
          <option
            value="2"
          >
            France
          </option>
          <option
            disabled=""
            value="3"
          >
            Luxembourg
          </option>
          <option
            value="4"
          >
            Germany
          </option>
          <option
            selected=""
            value="5"
          >
            Bulgaria
          </option>
          <option
            value="6"
          >
            Italy
          </option>
          <option
            value="7"
          >
            Romania
          </option>
          <option
            value="8"
          >
            Greece
          </option>
          <option
            value="9"
          >
            Hungary
          </option>
          <option
            value="10"
          >
            Portugal
          </option>
        </optgroup>
        <optgroup
          label="Non European countries"
        >
          <option
            value="11"
          >
            China
          </option>
        </optgroup>
        <option
          value="12"
        >
          standalone option
        </option>
      </select>
      <div
        class="ecl-select__icon"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-select__icon-shape"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </div>
    </div>
  </div>
</jest>
`;
